--- a/Personal/PersonalSite/Views/User/Index.cshtml
+++ b/Personal/PersonalSite/Views/User/Index.cshtml
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
     <nav class="navbar sticky-top navbar-dark bg-dark">
-        <span class="navbar-brand">Hobby Hub!</span>
+        <span class="navbar-brand">Song Kim's Portfolio Site</span>
         <span style="color: green;">@TempData["success"]</span>
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -21,6 +21,9 @@
         </ul>
     </nav><br>
     <div class="main_content">
+        <div>
+            <h4>Please login if you have an account to view my portfolio or register to see!</h4>
+        </div>
         <div class="reg">
             <div>@Html.Partial("./Partials/Register")</div>
         </div>
