--- a/Personal/PersonalSite/Views/Home/Dashboard.cshtml
+++ b/Personal/PersonalSite/Views/Home/Dashboard.cshtml
@@ -38,14 +38,14 @@
             </div>
         </div>
         <div class="footer row text-center">
-            <div class="col-lg-4  col-md-4 col-sm-12">
-                <a href="https://github.com/Keyrow" target="_blank" rel="noopener noreferrer"><img src="~/images/github.png" alt="github"></a>
+            <div class="col-lg-1 col-md-4 col-sm-12">
+                <a href="https://github.com/Keyrow" target="_blank" rel="noopener noreferrer"><img class="grow-effect" src="~/images/github.png" alt="github"></a>
             </div>                    
-            <div class="col-lg-4  col-md-4 col-sm-12">
-                <a href="https://www.linkedin.com/in/song-kim-31161b4a/" target="_blank" rel="noopener noreferrer"><img src="~/images/linkedin.png" alt="linkedin"></a>
+            <div class="col-lg-1 col-md-4 col-sm-12">
+                <a href="https://www.linkedin.com/in/song-kim-31161b4a/" target="_blank" rel="noopener noreferrer"><img class="grow-effect" src="~/images/linkedin.png" alt="linkedin"></a>
             </div>
-            <div class="col-lg-4  col-md-4 col-sm-12">
-                <a href="https://www.facebook.com/song.kim.397" target="_blank" rel="noopener noreferrer"><img src="~/images/facebook.png" alt="facebook"></a>
+            <div class="col-lg-1 col-md-4 col-sm-12">
+                <a href="https://www.facebook.com/song.kim.397" target="_blank" rel="noopener noreferrer"><img class="grow-effect" src="~/images/facebook.png" alt="facebook"></a>
             </div>
         </div>
     </div>
