--- a/Personal/PersonalSite/Views/Home/Resume.cshtml
+++ b/Personal/PersonalSite/Views/Home/Resume.cshtml
@@ -24,7 +24,7 @@
             </div>
         </div>
     </header>
-    <h1>Resume</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos odit at laboriosam esse, odio ipsam dolor quo voluptatum, pariatur necessitatibus magni sapiente. Sit atque temporibus suscipit pariatur? Eos, molestiae aliquid.</p>
+    @* PDF RESUME GOES HERE *@
+    <iframe src="https://docs.google.com/gview?url=https://github.com/Keyrow/Resume/raw/master/MyResume.pdf &embedded=true" style="width: 100%; height: 100vh;"></iframe>
 </body>
 </html>
